Build for second question

--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -8,12 +8,18 @@
     <string name="notification_description">The Project 3 repository is downloaded</string>
     <string name="notification_button">See changes</string>
 
-    <string name="button_name">Click me</string>
+    <string name="button_name">Download</string>
     <string name="button_loading">We are loading </string>
     <string name="title_activity_detail">DetailActivity</string>
 
     <string name="glide_radio_text">Glide - Image Loading Library by BumpTech</string>
     <string name="loadapp_radio_text">LoadApp - Current repository by Udacity</string>
     <string name="retrofit_radio_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
+
+    <string name="download_status_success">Success</string>
+    <string name="download_status_fail">Fail</string>
+    <string name="downloaded_file_status_key">Status</string>
+    <string name="downloaded_file_name_key">File Name</string>
+    <string name="channel_id">channel id</string>
 
 </resources>
