--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
     <string name="notification_description">The Project 3 repository is downloaded</string>
     <string name="notification_button">See changes</string>
+    <string name="notification_id">NOTIFICATION_ID</string>
+
 
     <string name="button_name">Download</string>
     <string name="button_loading">We are loading </string>
@@ -22,5 +24,7 @@
     <string name="downloaded_file_name_key">File Name</string>
     <string name="channel_id">Channel ID</string>
     <string name="channel_name">Downloads</string>
+    <string name="fileName">File name:</string>
+    <string name="status">Status:</string>
 
 </resources>
