--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="channel_name">Downloads</string>
     <string name="fileName">File name:</string>
     <string name="status">Status:</string>
+    <string name="download_image_button">Download Image Button</string>
 
 </resources>
